# v-starship

./: package-lock.json
.github/workflows/: k8s-deploy.yml  k8s-frontend-deploy.yml  k8s-indexer-deploy.yml
contract/starship/: Cargo.toml  README.md  build.rs
contract/starship/app/: Cargo.toml
contract/starship/app/src/: lib.rs
contract/starship/client/: Cargo.toml  build.rs
contract/starship/client/src/: lib.rs
contract/starship/src/: lib.rs
contract/starship/tests/: gtest.rs
frontend/: .env.example  Dockerfile  codegen.ts  index.html  package-lock.json  package.json  prettier.config.js  vite.config.ts
frontend/public/favicons/: site.webmanifest
frontend/src/: App.scss  App.tsx  consts.ts  hocs.tsx  index.css  main.tsx  utils.ts
frontend/src/api/: gear.ts
frontend/src/api/graphql/: hooks.ts  index.ts
frontend/src/api/sails/: index.ts
frontend/src/components/: index.ts
frontend/src/utils/: index.ts
indexer/: .env  .env.example  Dockerfile  README.md  package-lock.json  package.json  schema.graphql  tsconfig.json
indexer/assets/: starship.idl
indexer/db/migrations/: 1755554179789-$NAME.js  1755619566218-init.js  1755694248273-init.js  1755694579727-$NAME.js  1755886814858-init.js  1761140461384-games.js  1761144218884-games.js  1761151083862-games.js  1761151083863-view.js
indexer/src/: api.ts  config.ts  main.ts  sails-decoder.ts
indexer/src/handlers/: base.ts  game.ts  index.ts  leaderboard.ts  player.ts  stub.ts
indexer/src/helpers/: is.ts
indexer/src/model/: data-source.ts  dataSource.ts
indexer/src/types/: gear-events.ts
(+43 files in other folders)
